@@ -1,13 +1,7 @@
-buildscript {
-    ext {
-        springBootVersion = '2.1.3.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+
+plugins {
+    id 'org.springframework.boot' version '2.1.4.RELEASE'
+    id 'java'
 }
 
 apply plugin: 'idea'
@@ -15,18 +9,15 @@ apply plugin: 'eclipse'
 
 
 ext {
-    //springFrameworkVersion = '4.3.11.RELEASE'
-    springBootVersion = '2.1.3.RELEASE'
-    //springAmqpVersion = '2.0.4.RELEASE'
+    springBootVersion = "2.1.4.RELEASE"
+    mybatisStarterVersion = '2.0.1'
     swaggerVersion = '2.9.2'
-    //JAXB_VERSION = '2.3.0'
-    jacksonVersion = "2.9.4"
 }
 
 
 allprojects {
     group = 'io.github.alphajiang'
-    version = '0.0.1-SNAPSHOT'
+    version = '0.0.3'
     apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
     sourceCompatibility = JavaVersion.VERSION_1_10
@@ -58,20 +49,11 @@ allprojects {
 
 
 subprojects {
+
     apply plugin: 'maven'
     apply plugin: 'signing'
+    apply plugin: 'io.spring.dependency-management'
 
-    tasks.withType(AbstractCompile) {
-        options.compilerArgs += ["--add-modules", "java.xml.bind"]
-    }
-
-    tasks.withType(Test) {
-        jvmArgs += ["--add-modules", "java.xml.bind"]
-    }
-
-    configurations.all {
-        exclude module: 'spring-boot-starter-logging'
-    }
 
     task javadocJar(type: Jar) {
         classifier = 'javadoc'
@@ -87,11 +69,15 @@ subprojects {
         archives javadocJar, sourcesJar
     }
 
+    signing {
+        sign configurations.archives
+    }
+
 
     uploadArchives {
         repositories {
             mavenDeployer {
-                //beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
                 repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
                     authentication(userName: ossrhUsername, password: ossrhPassword)
@@ -134,28 +120,7 @@ subprojects {
     }
 
     dependencies {
-        implementation("org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}")
-        implementation("org.springframework.boot:spring-boot-starter-data-rest:${springBootVersion}")
 
-        //implementation("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
-        //implementation('org.springframework.cloud:spring-cloud-bus')
-        //implementation('org.springframework.cloud:spring-cloud-starter-bus-amqp')
-
-        compile('com.fasterxml.jackson.core:jackson-core')
-        compile('com.fasterxml.jackson.core:jackson-annotations')
-        compile('com.fasterxml.jackson.core:jackson-databind')
-        compile("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${jacksonVersion}")
-        compile("io.springfox:springfox-core:${swaggerVersion}")
-        compile("io.springfox:springfox-swagger2:${swaggerVersion}")
-        compile('io.swagger:swagger-annotations')
-        //compile('org.apache.commons:commons-lang3:3.6')
-        //compile('org.apache.commons:commons-collections4:4.1')
-        //compile('org.apache.commons:commons-text:1.1')
-        //compile('org.apache.commons:commons-digester3:3.2')
-        //compile('commons-io:commons-io:2.5')
-
-
-        //compile('org.aspectj:aspectjweaver:1.8.0')
 
 
         testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
